[workspace]
members = ["arro3-compute", "arro3-core", "arro3-io"]
# Note: we exclude pyo3-arrow from the top-level workspace because we have a
# circular dependency. pyo3-arrow is depended on by obstore to return arrow
# results as a list, which is depended on by arro3-io. This makes it hard to
# upgrade versions.
exclude = ["pyo3-arrow"]
resolver = "2"

[workspace.package]
# Package version for arro3-*, not for pyo3-arrow
version = "0.6.5"
authors = ["Kyle Barron <kylebarron2@gmail.com>"]
edition = "2021"
homepage = "https://kylebarron.dev/arro3"
repository = "https://github.com/kylebarron/arro3"
license = "MIT OR Apache-2.0"
keywords = ["python", "arrow"]
categories = []
rust-version = "1.75"

[workspace.dependencies]
arrow-arith = "57"
arrow-array = { version = "57", features = ["ffi"] }
arrow-buffer = "57"
arrow-cast = "57"
arrow-csv = "57"
arrow-ipc = { version = "57", features = ["lz4", "zstd"] }
arrow-json = "57"
arrow-schema = "57"
arrow-select = "57"
bytes = "1.7.0"
half = "2"
indexmap = "2.11"
numpy = "0.28"
object_store = "0.12.4"
parquet = "57"
pyo3 = { version = "0.28", features = ["macros", "indexmap"] }
pyo3-arrow = { path = "pyo3-arrow" }
pyo3-async-runtimes = { version = "0.28", features = ["tokio-runtime"] }
pyo3-file = { git = "https://github.com/kylebarron/pyo3-file", rev = "f724ceaa7e06e7d227bf40b1d60adbb842963a44" }
pyo3-object_store = "0.9"
thiserror = "1.0.63"

[profile.release]
lto = true
codegen-units = 1
