[workspace]
members = ["arro3-compute", "arro3-core", "arro3-io"]
# Note: we exclude pyo3-arrow from the top-level workspace because we have a
# circular dependency. pyo3-arrow is depended on by obstore to return arrow
# results as a list, which is depended on by arro3-io. This makes it hard to
# upgrade versions.
exclude = ["pyo3-arrow"]
resolver = "2"

[workspace.package]
# Package version for arro3-*, not for pyo3-arrow
version = "0.6.6"
authors = ["Kyle Barron <kylebarron2@gmail.com>"]
edition = "2021"
homepage = "https://kylebarron.dev/arro3"
repository = "https://github.com/kylebarron/arro3"
license = "MIT OR Apache-2.0"
keywords = ["python", "arrow"]
categories = []
rust-version = "1.75"

[workspace.dependencies]
# We pin arrow to <57.2 because of
# https://github.com/apache/arrow-rs/pull/8944#issuecomment-3885228879
arrow-arith = ">=57,<57.2"
arrow-array = { version = ">=57,<57.2", features = ["ffi"] }
arrow-buffer = ">=57,<57.2"
arrow-cast = ">=57,<57.2"
arrow-csv = ">=57,<57.2"
arrow-ipc = { version = ">=57,<57.2", features = ["lz4", "zstd"] }
arrow-json = ">=57,<57.2"
arrow-schema = ">=57,<57.2"
arrow-select = ">=57,<57.2"
bytes = "1.7.0"
half = "2"
indexmap = "2.11"
numpy = "0.28"
object_store = "0.12"
parquet = ">=57,<57.2"
pyo3 = { version = "0.28", features = ["macros", "indexmap"] }
pyo3-arrow = { path = "pyo3-arrow" }
pyo3-async-runtimes = { version = "0.28", features = ["tokio-runtime"] }
pyo3-file = { git = "https://github.com/kylebarron/pyo3-file", rev = "f724ceaa7e06e7d227bf40b1d60adbb842963a44" }
pyo3-object_store = "0.10"
thiserror = "1.0.63"

[profile.release]
lto = true
codegen-units = 1
