[project]
name = "arro3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[tool.uv]
dev-dependencies = [
    "black>=24.10.0",
    "boto3>=1.35.38",
    "geoarrow-types>=0.2.0",
    "griffe-inherited-docstrings>=1.0.1",
    "ipykernel>=6.29.5",
    "maturin>=1.7.4",
    "mike>=2.1.3",
    "mkdocs-material[imaging]>=9.6.7",
    "mkdocs-redirects>=1.2.2",
    "mkdocs>=1.6.1",
    "mkdocstrings[python]>=0.28.3",
    "pandas-stubs>=2.2.3.250527",
    "pandas>=2.2.3",
    "pip>=24.2",
    "pyarrow>=17.0.0",
    "pyodide-build>=0.25.1",
    "pytest>=8.3.3",
]

[tool.ruff]
select = [
    # Pyflakes
    "F",
    # Pycodestyle
    # "E",
    "W",
    # isort
    "I",
]

[tool.ruff.extend-per-file-ignores]
"__init__.py" = [
    "F401", # Allow unused imports in __init__.py files
    "F403", # unable to detect undefined names
]
