[project]
# This top-level project only manages the dev environment.
# The real arro3-* libraries are defined in each `arro3-*` directory.
name = "dev-environment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[tool.uv]
dev-dependencies = [
    "boto3>=1.35.38",
    "geoarrow-types>=0.3.0",
    "ipykernel>=6.29.5",
    "maturin>=1.7.4",
    "pandas-stubs>=2.2.3.250527",
    "pandas>=2.2.3",
    "pip>=24.2",
    "pyarrow>=21.0.0",
    "pytest>=8.3.3",
    "pytest-freethreaded>=0.1.0",
    "pre-commit>=4.3.0",
]

[tool.ruff.lint]
select = [
    # Pyflakes
    "F",
    # Pycodestyle
    # "E",
    "W",
    # isort
    "I",
]

[tool.ruff.lint.extend-per-file-ignores]
"__init__.py" = [
    "F401", # Allow unused imports in __init__.py files
    "F403", # unable to detect undefined names
]

[dependency-groups]
# This is separate from dev deps because mkdocs-material[imaging] doesn't
# support Python 3.13 free-threaded
docs = [
    "black>=24.10.0",
    "griffe-inherited-docstrings>=1.0.1",
    "mike>=2.1.3",
    "mkdocs-material[imaging]>=9.6.7",
    "mkdocs-redirects>=1.2.2",
    "mkdocs>=1.6.1",
    "mkdocstrings[python]>=0.28.3",
]
