[package]
name = "arro3-compute"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
description = "Rust-based compute kernels for Arrow in Python."
readme = "README.md"
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }
rust-version = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "_compute"
crate-type = ["cdylib"]

[dependencies]
arrow-array = { workspace = true }
arrow-buffer = { workspace = true }
arrow-cast = { workspace = true }
arrow-schema = { workspace = true }
arrow-select = { workspace = true }
arrow = { workspace = true, features = ["ffi"] }
pyo3 = { workspace = true }
pyo3-arrow = { workspace = true }
thiserror = { workspace = true }
