[package]
name = "arro3-core"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
description = "Core library for representing Arrow data in Python."
readme = "README.md"
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }
rust-version = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "_core"
crate-type = ["cdylib"]

[dependencies]
arrow-array = { workspace = true }
arrow-buffer = { workspace = true }
arrow-schema = { workspace = true }
pyo3-arrow = { path = "../pyo3-arrow" }
pyo3 = { workspace = true }
