[package]
name = "arro3-core"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
description = "Core library for representing Arrow data in Python."
readme = "README.md"
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }
rust-version = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "_core"
crate-type = ["cdylib"]

[features]
abi3-py311 = ["pyo3/abi3-py311"]
extension-module = ["pyo3/extension-module"]

[dependencies]
arrow-array = { workspace = true }
arrow-buffer = { workspace = true }
arrow-cast = { workspace = true, features = ["prettyprint"] }
arrow-schema = { workspace = true }
pyo3-arrow = { workspace = true }
pyo3 = { workspace = true }
