[package]
name = "arro3-internal"
version = "0.1.0"
authors = ["Kyle Barron <kylebarron2@gmail.com>"]
edition = "2021"
description = "Internal structs for representing Arrow data in Python."
readme = "README.md"
repository = "https://github.com/kylebarron/arro3"
license = "MIT OR Apache-2.0"
keywords = ["python", "arrow"]
categories = []
rust-version = "1.75"

[dependencies]
arrow-array = { workspace = true }
arrow-buffer = { workspace = true }
arrow-schema = { workspace = true }
arrow = { workspace = true, features = ["ffi"] }
pyo3 = { workspace = true, features = ["abi3-py38"] }
numpy = { workspace = true, features = ["half"] }
thiserror = { workspace = true }

[lib]
crate-type = ["rlib"]
