[package]
name = "arro3-io"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
description = "Rust-based readers and writers for Arrow in Python."
readme = "README.md"
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }
rust-version = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "_io"
crate-type = ["cdylib"]

[dependencies]
arrow-array = { workspace = true }
arrow-buffer = { workspace = true }
arrow-csv = { workspace = true }
arrow-ipc = { workspace = true }
arrow-schema = { workspace = true }
arrow = { workspace = true, features = ["ffi"] }
bytes = "1.7.0"
futures = "0.3.30"
parquet = { workspace = true, features = ["async"] }
pyo3 = { workspace = true }
pyo3-arrow = { path = "../pyo3-arrow" }
pyo3-asyncio-0-21 = { version = "0.21.0", features = ["tokio-runtime"] }
pyo3-file = { workspace = true }
thiserror = { workspace = true }
tokio = "1.9"
