[package]
name = "arro3-io"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
description = "Rust-based readers and writers for Arrow in Python."
readme = "README.md"
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }
rust-version = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "_io"
crate-type = ["cdylib"]

[features]
default = ["async"]
# Include async code. This feature won't compile for pyodide.
async = [
    "dep:pyo3-object_store",
    "dep:pyo3-async-runtimes",
    "parquet/object_store",
    "dep:object_store",
    "dep:futures",
]

[dependencies]
arrow-array = { workspace = true }
arrow = { workspace = true, features = ["ffi"] }
arrow-buffer = { workspace = true }
arrow-csv = { workspace = true }
arrow-ipc = { workspace = true }
arrow-schema = { workspace = true }
bytes = "1.7.0"
futures = { version = "0.3.30", optional = true }
object_store = { version = "0.11", optional = true }
parquet = { workspace = true }
pyo3 = { workspace = true }
pyo3-arrow = { path = "../pyo3-arrow" }
pyo3-async-runtimes = { git = "https://github.com/PyO3/pyo3-async-runtimes", features = [
    "tokio-runtime",
], optional = true }
pyo3-file = { workspace = true }
pyo3-object_store = { path = "../pyo3-object_store", optional = true }
thiserror = { workspace = true }
