[package]
name = "pyo3-arrow"
version = "0.12.0"
authors = ["Kyle Barron <kylebarron2@gmail.com>"]
edition = "2021"
description = "Arrow integration for pyo3."
readme = "README.md"
repository = "https://github.com/kylebarron/arro3"
license = "MIT OR Apache-2.0"
keywords = ["python", "arrow"]
categories = []
rust-version = "1.75"

[features]
default = ["buffer_protocol"]

# Support buffer protocol. Requires `abi3-py311` pyo3 feature or non-abi3
# wheels.
buffer_protocol = []

[dependencies]
arrow-array = { version = "56", features = ["chrono-tz", "ffi"] }
arrow-buffer = "56"
arrow-cast = { version = "56", features = ["prettyprint"] }
arrow-data = "56"
arrow-schema = "56"
arrow-select = "56"
chrono = "0.4"
chrono-tz = "0.10"
pyo3 = { version = "0.26", features = ["chrono", "chrono-tz", "indexmap"] }
half = "2"
indexmap = "2"
numpy = { version = "0.26", features = ["half"] }
thiserror = "1"

[lib]
crate-type = ["rlib"]
