[package]
name = "pyo3-arrow"
version = "0.16.0"
authors = ["Kyle Barron <kylebarron2@gmail.com>"]
edition = "2021"
description = "Arrow integration for pyo3."
readme = "README.md"
repository = "https://github.com/kylebarron/arro3"
license = "MIT OR Apache-2.0"
keywords = ["python", "arrow"]
categories = []
rust-version = "1.75"

[features]
default = ["buffer_protocol"]

# Enable #[pyclass] and #[pymethods] definitions for arro3 Python classes.
# External consumers that only need FFI/conversion should leave this off.
arro3 = ["dep:indexmap", "pyo3/indexmap", "dep:chrono", "dep:chrono-tz", "arrow-array/chrono-tz", "pyo3/chrono", "pyo3/chrono-tz", "dep:half", "numpy/half"]

# Support buffer protocol. Requires `abi3-py311` pyo3 feature or non-abi3
# wheels.
buffer_protocol = []

[dependencies]
arrow-array = { version = "57", features = ["ffi"] }
arrow-buffer = "57"
arrow-cast = { version = "57", features = ["prettyprint"] }
arrow-schema = "57"
arrow-select = "57"
chrono = { version = "0.4", optional = true }
chrono-tz = { version = "0.10", optional = true }
pyo3 = { version = "0.28" }
half = { version = "2", optional = true }
indexmap = { version = "2", optional = true }
numpy = { version = "0.28" }
thiserror = "1"

[lib]
crate-type = ["rlib"]
